腾讯首页修改

--- a/腾讯新闻首页切换效果/index.html
+++ b/腾讯新闻首页切换效果/index.html
@@ -12,6 +12,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	
 }
 #header {
 	position:absolute;
@@ -40,8 +41,9 @@
 	background: linear-gradient(left, rgba(15,166,234,1) 0, rgba(89,204,24,1) 10%, rgba(15,166,234,1) 60%, rgba(15,166,234,1) 100%);
 }
 #header .swiper-slide {
-		padding: 0 20px;
+		padding: 0 24px;
 		width:auto;
+		font-family: "微软雅黑";
 }
 #banner {
 		width: 100%;
